--- a/Yelp Locator/Yelp Locator/Views/BusinessListViewController.xib
+++ b/Yelp Locator/Yelp Locator/Views/BusinessListViewController.xib
@@ -10,8 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BusinessListViewController" customModule="Yelp_Locator" customModuleProvider="target">
             <connections>
-                <outlet property="businessesTableView" destination="EYl-cg-Vcd" id="Tm3-xr-iBN"/>
-                <outlet property="filterTextField" destination="KaI-do-JZl" id="I0S-We-8rI"/>
+                <outlet property="businessListTableview" destination="EYl-cg-Vcd" id="kUV-98-rPk"/>
                 <outlet property="searchByTextField" destination="oZn-mx-EdR" id="HPg-F2-bf5"/>
                 <outlet property="searchTextField" destination="2hK-1l-NLO" id="UDN-VI-Kkv"/>
                 <outlet property="searchView" destination="XtW-fK-P7Z" id="SZV-f2-cyz"/>
@@ -24,10 +23,10 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XtW-fK-P7Z">
-                    <rect key="frame" x="0.0" y="44" width="414" height="110"/>
+                    <rect key="frame" x="0.0" y="44" width="414" height="75"/>
                     <subviews>
                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oZn-mx-EdR">
-                            <rect key="frame" x="10" y="10" width="394" height="30"/>
+                            <rect key="frame" x="10" y="10" width="32" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="30" id="B1J-IL-StI"/>
                             </constraints>
@@ -35,17 +34,9 @@
                             <textInputTraits key="textInputTraits"/>
                         </textField>
                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2hK-1l-NLO">
-                            <rect key="frame" x="10" y="80" width="394" height="30"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="30" id="jd3-wy-EGi"/>
-                            </constraints>
-                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                            <textInputTraits key="textInputTraits"/>
-                        </textField>
-                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KaI-do-JZl">
                             <rect key="frame" x="10" y="45" width="394" height="30"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="30" id="uRd-iK-mDE"/>
+                                <constraint firstAttribute="height" constant="30" id="jd3-wy-EGi"/>
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits"/>
@@ -54,19 +45,16 @@
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <constraints>
                         <constraint firstAttribute="trailing" secondItem="2hK-1l-NLO" secondAttribute="trailing" constant="10" id="6hG-z8-1iv"/>
-                        <constraint firstAttribute="trailing" secondItem="KaI-do-JZl" secondAttribute="trailing" constant="10" id="AMe-cF-UST"/>
                         <constraint firstAttribute="bottom" secondItem="2hK-1l-NLO" secondAttribute="bottom" id="Dnw-u1-0xJ"/>
-                        <constraint firstItem="2hK-1l-NLO" firstAttribute="top" secondItem="KaI-do-JZl" secondAttribute="bottom" constant="5" id="Fyg-KY-wD8"/>
                         <constraint firstItem="oZn-mx-EdR" firstAttribute="leading" secondItem="XtW-fK-P7Z" secondAttribute="leading" constant="10" id="Kpn-TZ-hqV"/>
                         <constraint firstItem="oZn-mx-EdR" firstAttribute="top" secondItem="XtW-fK-P7Z" secondAttribute="top" constant="10" id="PvZ-rA-Whs"/>
-                        <constraint firstAttribute="trailing" secondItem="oZn-mx-EdR" secondAttribute="trailing" constant="10" id="TVj-sC-eHZ"/>
+                        <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="oZn-mx-EdR" secondAttribute="trailing" constant="10" id="TVj-sC-eHZ"/>
                         <constraint firstItem="2hK-1l-NLO" firstAttribute="leading" secondItem="XtW-fK-P7Z" secondAttribute="leading" constant="10" id="a4x-cA-7bA"/>
-                        <constraint firstItem="KaI-do-JZl" firstAttribute="leading" secondItem="XtW-fK-P7Z" secondAttribute="leading" constant="10" id="pHG-xg-hAx"/>
-                        <constraint firstItem="KaI-do-JZl" firstAttribute="top" secondItem="oZn-mx-EdR" secondAttribute="bottom" constant="5" id="y3o-SH-HhU"/>
+                        <constraint firstItem="2hK-1l-NLO" firstAttribute="top" secondItem="oZn-mx-EdR" secondAttribute="bottom" constant="5" id="cRI-J1-hrV"/>
                     </constraints>
                 </view>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="EYl-cg-Vcd">
-                    <rect key="frame" x="10" y="164" width="394" height="688"/>
+                    <rect key="frame" x="10" y="129" width="394" height="723"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                 </tableView>
             </subviews>
@@ -74,7 +62,7 @@
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <accessibility key="accessibilityConfiguration" identifier="BusinessListViewController"/>
             <constraints>
-                <constraint firstItem="XtW-fK-P7Z" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="H5u-DI-qbc"/>
+                <constraint firstItem="XtW-fK-P7Z" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="8Kh-ZY-6YN"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="EYl-cg-Vcd" secondAttribute="bottom" constant="10" id="I0T-z3-OtN"/>
                 <constraint firstItem="EYl-cg-Vcd" firstAttribute="top" secondItem="XtW-fK-P7Z" secondAttribute="bottom" constant="10" id="a1y-Hw-EAg"/>
                 <constraint firstItem="XtW-fK-P7Z" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="fA7-of-2UQ"/>
