--- a/Yelp Locator/Yelp Locator/Views/Business Details/BusinessDetailsViewController.xib
+++ b/Yelp Locator/Yelp Locator/Views/Business Details/BusinessDetailsViewController.xib
@@ -67,7 +67,7 @@
                                     <rect key="frame" x="172" y="220.5" width="70" height="30"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="30" id="6sZ-Pq-Idr"/>
-                                        <constraint firstAttribute="width" constant="70" id="awV-Wc-fAY"/>
+                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="70" id="awV-Wc-fAY"/>
                                     </constraints>
                                     <state key="normal" title="Button"/>
                                 </button>
@@ -97,7 +97,6 @@
                         <constraint firstItem="DnJ-dy-g4Q" firstAttribute="height" secondItem="vPL-Zw-Ph2" secondAttribute="height" priority="250" id="7pX-7e-D69"/>
                         <constraint firstAttribute="bottom" secondItem="DnJ-dy-g4Q" secondAttribute="bottom" id="O2g-62-p2Q"/>
                         <constraint firstItem="DnJ-dy-g4Q" firstAttribute="leading" secondItem="vPL-Zw-Ph2" secondAttribute="leading" constant="6" id="VNo-Jk-4Qb"/>
-                        <constraint firstItem="DnJ-dy-g4Q" firstAttribute="width" secondItem="vPL-Zw-Ph2" secondAttribute="width" id="eTw-Yo-H3a"/>
                         <constraint firstItem="DnJ-dy-g4Q" firstAttribute="top" secondItem="vPL-Zw-Ph2" secondAttribute="top" id="rKa-Yp-MkV"/>
                     </constraints>
                 </scrollView>
@@ -105,6 +104,7 @@
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
+                <constraint firstItem="DnJ-dy-g4Q" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" id="2eh-bD-EPU"/>
                 <constraint firstItem="vPL-Zw-Ph2" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="Bbc-k9-pkb"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="vPL-Zw-Ph2" secondAttribute="trailing" id="KJI-ji-CT2"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="vPL-Zw-Ph2" secondAttribute="bottom" id="Nm1-Oi-o9c"/>
