--- a/Yelp Locator/Yelp Locator/Views/Business Details/BusinessDetailsViewController.xib
+++ b/Yelp Locator/Yelp Locator/Views/Business Details/BusinessDetailsViewController.xib
@@ -15,6 +15,8 @@
                 <outlet property="detailsScrollView" destination="vPL-Zw-Ph2" id="FAT-N9-5eK"/>
                 <outlet property="imageView" destination="XFC-I1-fFk" id="ihL-bl-VKD"/>
                 <outlet property="infoStackView" destination="Nd7-0w-Hlr" id="keN-ty-wIx"/>
+                <outlet property="reviewsStackView" destination="hoC-ch-BWc" id="ERQ-1L-CPl"/>
+                <outlet property="reviewsTitleLabel" destination="rh7-Nc-Ug6" id="j05-Jl-aCq"/>
                 <outlet property="titleLabel" destination="oWB-W8-kxX" id="QV0-Y6-lM5"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -54,8 +56,20 @@
                                         </view>
                                     </subviews>
                                 </stackView>
+                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="hoC-ch-BWc" customClass="uiv">
+                                    <rect key="frame" x="0.0" y="211" width="414" height="0.0"/>
+                                    <subviews>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mKt-jX-lPA">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="0.0"/>
+                                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" id="teb-WB-4Xa"/>
+                                            </constraints>
+                                        </view>
+                                    </subviews>
+                                </stackView>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XUj-Mf-Sw5">
-                                    <rect key="frame" x="0.0" y="185.5" width="414" height="30"/>
+                                    <rect key="frame" x="0.0" y="216" width="414" height="30"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="30" id="p5u-6t-OPh"/>
                                     </constraints>
@@ -64,27 +78,39 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ww7-MK-8ih">
-                                    <rect key="frame" x="172" y="220.5" width="70" height="30"/>
+                                    <rect key="frame" x="172" y="251" width="70" height="30"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="30" id="6sZ-Pq-Idr"/>
                                         <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="70" id="awV-Wc-fAY"/>
                                     </constraints>
                                     <state key="normal" title="Button"/>
                                 </button>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rh7-Nc-Ug6">
+                                    <rect key="frame" x="0.0" y="185.5" width="414" height="20.5"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
                             </subviews>
                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             <constraints>
                                 <constraint firstItem="XUj-Mf-Sw5" firstAttribute="leading" secondItem="DnJ-dy-g4Q" secondAttribute="leading" id="1M8-0J-28j"/>
                                 <constraint firstItem="Nd7-0w-Hlr" firstAttribute="top" secondItem="oWB-W8-kxX" secondAttribute="bottom" constant="5" id="1VL-mM-HXQ"/>
+                                <constraint firstItem="hoC-ch-BWc" firstAttribute="leading" secondItem="DnJ-dy-g4Q" secondAttribute="leading" id="5kN-G8-Gph"/>
                                 <constraint firstItem="oWB-W8-kxX" firstAttribute="leading" secondItem="DnJ-dy-g4Q" secondAttribute="leading" id="AKZ-ke-Q63"/>
                                 <constraint firstItem="oWB-W8-kxX" firstAttribute="top" secondItem="XFC-I1-fFk" secondAttribute="bottom" constant="5" id="Czx-JD-TlC"/>
-                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="ww7-MK-8ih" secondAttribute="bottom" constant="10" id="Dbk-5z-IlV"/>
+                                <constraint firstItem="XUj-Mf-Sw5" firstAttribute="top" secondItem="hoC-ch-BWc" secondAttribute="bottom" constant="5" id="DM1-NS-88T"/>
                                 <constraint firstItem="XFC-I1-fFk" firstAttribute="leading" secondItem="DnJ-dy-g4Q" secondAttribute="leading" id="FJf-0Y-a7h"/>
                                 <constraint firstItem="XFC-I1-fFk" firstAttribute="top" secondItem="DnJ-dy-g4Q" secondAttribute="top" id="G5h-BE-arP"/>
+                                <constraint firstItem="ww7-MK-8ih" firstAttribute="top" secondItem="XUj-Mf-Sw5" secondAttribute="bottom" constant="5" id="ToO-GK-LIk"/>
+                                <constraint firstAttribute="trailing" secondItem="rh7-Nc-Ug6" secondAttribute="trailing" id="UTb-xV-tDA"/>
                                 <constraint firstAttribute="trailing" secondItem="XFC-I1-fFk" secondAttribute="trailing" id="YfS-wq-L6R"/>
-                                <constraint firstItem="XUj-Mf-Sw5" firstAttribute="top" secondItem="Nd7-0w-Hlr" secondAttribute="bottom" constant="5" id="cpa-j5-4KU"/>
-                                <constraint firstItem="ww7-MK-8ih" firstAttribute="top" secondItem="XUj-Mf-Sw5" secondAttribute="bottom" constant="5" id="duK-oO-7sF"/>
+                                <constraint firstAttribute="trailing" secondItem="hoC-ch-BWc" secondAttribute="trailing" id="d56-RQ-X0U"/>
+                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="ww7-MK-8ih" secondAttribute="bottom" constant="10" id="gg3-yY-txr"/>
+                                <constraint firstItem="rh7-Nc-Ug6" firstAttribute="top" secondItem="Nd7-0w-Hlr" secondAttribute="bottom" constant="5" id="h48-Ol-Igh"/>
                                 <constraint firstAttribute="trailing" secondItem="Nd7-0w-Hlr" secondAttribute="trailing" id="hnR-Vy-Sbz"/>
+                                <constraint firstItem="hoC-ch-BWc" firstAttribute="top" secondItem="rh7-Nc-Ug6" secondAttribute="bottom" constant="5" id="k9o-CO-1k1"/>
+                                <constraint firstItem="rh7-Nc-Ug6" firstAttribute="leading" secondItem="DnJ-dy-g4Q" secondAttribute="leading" id="lVF-Cw-dXU"/>
                                 <constraint firstAttribute="trailing" secondItem="XUj-Mf-Sw5" secondAttribute="trailing" id="r1j-sg-bt9"/>
                                 <constraint firstItem="ww7-MK-8ih" firstAttribute="centerX" secondItem="DnJ-dy-g4Q" secondAttribute="centerX" id="wHV-KY-pPt"/>
                                 <constraint firstItem="Nd7-0w-Hlr" firstAttribute="leading" secondItem="DnJ-dy-g4Q" secondAttribute="leading" id="wMs-jy-V5i"/>
