Integrated List with Detail view, UI adjustments, rating icon handling

--- a/Yelp Locator/Yelp Locator/Views/Business Details/BusinessDetailsViewController.xib
+++ b/Yelp Locator/Yelp Locator/Views/Business Details/BusinessDetailsViewController.xib
@@ -30,25 +30,25 @@
                     <rect key="frame" x="0.0" y="44" width="414" height="853"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DnJ-dy-g4Q">
-                            <rect key="frame" x="6" y="0.0" width="414" height="853"/>
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="853"/>
                             <subviews>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="XFC-I1-fFk">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="150"/>
+                                    <rect key="frame" x="0.0" y="10" width="414" height="150"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="150" id="LX2-83-JWH"/>
                                     </constraints>
                                 </imageView>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oWB-W8-kxX">
-                                    <rect key="frame" x="0.0" y="155" width="414" height="20.5"/>
+                                    <rect key="frame" x="10" y="165" width="394" height="20.5"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Nd7-0w-Hlr" customClass="uiv">
-                                    <rect key="frame" x="0.0" y="180.5" width="414" height="0.0"/>
+                                    <rect key="frame" x="10" y="190.5" width="394" height="0.0"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qq1-Yi-dmz">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="0.0"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="394" height="0.0"/>
                                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" id="Flp-ag-qy7"/>
@@ -57,10 +57,10 @@
                                     </subviews>
                                 </stackView>
                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="hoC-ch-BWc" customClass="uiv">
-                                    <rect key="frame" x="0.0" y="211" width="414" height="0.0"/>
+                                    <rect key="frame" x="10" y="222" width="394" height="0.0"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mKt-jX-lPA">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="0.0"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="394" height="0.0"/>
                                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" id="teb-WB-4Xa"/>
@@ -69,7 +69,7 @@
                                     </subviews>
                                 </stackView>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XUj-Mf-Sw5">
-                                    <rect key="frame" x="0.0" y="216" width="414" height="30"/>
+                                    <rect key="frame" x="10" y="228" width="394" height="30"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="30" id="p5u-6t-OPh"/>
                                     </constraints>
@@ -78,51 +78,72 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ww7-MK-8ih">
-                                    <rect key="frame" x="172" y="251" width="70" height="30"/>
+                                    <rect key="frame" x="157" y="263" width="100" height="30"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="30" id="6sZ-Pq-Idr"/>
-                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="70" id="awV-Wc-fAY"/>
+                                        <constraint firstAttribute="width" constant="100" id="awV-Wc-fAY"/>
                                     </constraints>
                                     <state key="normal" title="Button"/>
                                 </button>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rh7-Nc-Ug6">
-                                    <rect key="frame" x="0.0" y="185.5" width="414" height="20.5"/>
+                                    <rect key="frame" x="10" y="196.5" width="394" height="20.5"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="r6O-Eq-TA1">
+                                    <rect key="frame" x="0.0" y="193" width="414" height="1"/>
+                                    <color key="backgroundColor" red="0.93332451579999998" green="0.9333273768" blue="0.93333357569999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="1" id="j5h-oE-2T0"/>
+                                    </constraints>
+                                </view>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uAn-ej-Uaq">
+                                    <rect key="frame" x="0.0" y="224.5" width="414" height="1"/>
+                                    <color key="backgroundColor" red="0.94549435380000002" green="0.94565302129999995" blue="0.94547218079999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="1" id="Z8B-nX-Mtc"/>
+                                    </constraints>
+                                </view>
                             </subviews>
                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             <constraints>
-                                <constraint firstItem="XUj-Mf-Sw5" firstAttribute="leading" secondItem="DnJ-dy-g4Q" secondAttribute="leading" id="1M8-0J-28j"/>
+                                <constraint firstItem="XUj-Mf-Sw5" firstAttribute="leading" secondItem="DnJ-dy-g4Q" secondAttribute="leading" constant="10" id="1M8-0J-28j"/>
                                 <constraint firstItem="Nd7-0w-Hlr" firstAttribute="top" secondItem="oWB-W8-kxX" secondAttribute="bottom" constant="5" id="1VL-mM-HXQ"/>
-                                <constraint firstItem="hoC-ch-BWc" firstAttribute="leading" secondItem="DnJ-dy-g4Q" secondAttribute="leading" id="5kN-G8-Gph"/>
-                                <constraint firstItem="oWB-W8-kxX" firstAttribute="leading" secondItem="DnJ-dy-g4Q" secondAttribute="leading" id="AKZ-ke-Q63"/>
+                                <constraint firstItem="r6O-Eq-TA1" firstAttribute="leading" secondItem="DnJ-dy-g4Q" secondAttribute="leading" id="1hR-cQ-8MP"/>
+                                <constraint firstItem="uAn-ej-Uaq" firstAttribute="top" secondItem="hoC-ch-BWc" secondAttribute="bottom" constant="2.5" id="5jP-f7-vqY"/>
+                                <constraint firstItem="hoC-ch-BWc" firstAttribute="leading" secondItem="DnJ-dy-g4Q" secondAttribute="leading" constant="10" id="5kN-G8-Gph"/>
+                                <constraint firstItem="XUj-Mf-Sw5" firstAttribute="top" secondItem="uAn-ej-Uaq" secondAttribute="bottom" constant="2.5" id="72G-To-0bd"/>
+                                <constraint firstItem="rh7-Nc-Ug6" firstAttribute="top" secondItem="r6O-Eq-TA1" secondAttribute="bottom" constant="2.5" id="7sU-eH-eHV"/>
+                                <constraint firstItem="oWB-W8-kxX" firstAttribute="leading" secondItem="DnJ-dy-g4Q" secondAttribute="leading" constant="10" id="AKZ-ke-Q63"/>
                                 <constraint firstItem="oWB-W8-kxX" firstAttribute="top" secondItem="XFC-I1-fFk" secondAttribute="bottom" constant="5" id="Czx-JD-TlC"/>
-                                <constraint firstItem="XUj-Mf-Sw5" firstAttribute="top" secondItem="hoC-ch-BWc" secondAttribute="bottom" constant="5" id="DM1-NS-88T"/>
                                 <constraint firstItem="XFC-I1-fFk" firstAttribute="leading" secondItem="DnJ-dy-g4Q" secondAttribute="leading" id="FJf-0Y-a7h"/>
-                                <constraint firstItem="XFC-I1-fFk" firstAttribute="top" secondItem="DnJ-dy-g4Q" secondAttribute="top" id="G5h-BE-arP"/>
+                                <constraint firstItem="XFC-I1-fFk" firstAttribute="top" secondItem="DnJ-dy-g4Q" secondAttribute="top" constant="10" id="G5h-BE-arP"/>
+                                <constraint firstAttribute="trailing" secondItem="uAn-ej-Uaq" secondAttribute="trailing" id="HKm-BC-ddj"/>
+                                <constraint firstItem="uAn-ej-Uaq" firstAttribute="leading" secondItem="DnJ-dy-g4Q" secondAttribute="leading" id="Kax-21-MTa"/>
                                 <constraint firstItem="ww7-MK-8ih" firstAttribute="top" secondItem="XUj-Mf-Sw5" secondAttribute="bottom" constant="5" id="ToO-GK-LIk"/>
-                                <constraint firstAttribute="trailing" secondItem="rh7-Nc-Ug6" secondAttribute="trailing" id="UTb-xV-tDA"/>
+                                <constraint firstAttribute="trailing" secondItem="rh7-Nc-Ug6" secondAttribute="trailing" constant="10" id="UTb-xV-tDA"/>
                                 <constraint firstAttribute="trailing" secondItem="XFC-I1-fFk" secondAttribute="trailing" id="YfS-wq-L6R"/>
-                                <constraint firstAttribute="trailing" secondItem="hoC-ch-BWc" secondAttribute="trailing" id="d56-RQ-X0U"/>
+                                <constraint firstAttribute="trailing" secondItem="r6O-Eq-TA1" secondAttribute="trailing" id="ZbD-wo-ubv"/>
+                                <constraint firstAttribute="trailing" secondItem="hoC-ch-BWc" secondAttribute="trailing" constant="10" id="d56-RQ-X0U"/>
                                 <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="ww7-MK-8ih" secondAttribute="bottom" constant="10" id="gg3-yY-txr"/>
-                                <constraint firstItem="rh7-Nc-Ug6" firstAttribute="top" secondItem="Nd7-0w-Hlr" secondAttribute="bottom" constant="5" id="h48-Ol-Igh"/>
-                                <constraint firstAttribute="trailing" secondItem="Nd7-0w-Hlr" secondAttribute="trailing" id="hnR-Vy-Sbz"/>
+                                <constraint firstAttribute="trailing" secondItem="Nd7-0w-Hlr" secondAttribute="trailing" constant="10" id="hnR-Vy-Sbz"/>
                                 <constraint firstItem="hoC-ch-BWc" firstAttribute="top" secondItem="rh7-Nc-Ug6" secondAttribute="bottom" constant="5" id="k9o-CO-1k1"/>
-                                <constraint firstItem="rh7-Nc-Ug6" firstAttribute="leading" secondItem="DnJ-dy-g4Q" secondAttribute="leading" id="lVF-Cw-dXU"/>
-                                <constraint firstAttribute="trailing" secondItem="XUj-Mf-Sw5" secondAttribute="trailing" id="r1j-sg-bt9"/>
+                                <constraint firstItem="rh7-Nc-Ug6" firstAttribute="leading" secondItem="DnJ-dy-g4Q" secondAttribute="leading" constant="10" id="lVF-Cw-dXU"/>
+                                <constraint firstAttribute="trailing" secondItem="XUj-Mf-Sw5" secondAttribute="trailing" constant="10" id="r1j-sg-bt9"/>
+                                <constraint firstItem="r6O-Eq-TA1" firstAttribute="top" secondItem="Nd7-0w-Hlr" secondAttribute="bottom" constant="2.5" id="vhq-o5-SUV"/>
                                 <constraint firstItem="ww7-MK-8ih" firstAttribute="centerX" secondItem="DnJ-dy-g4Q" secondAttribute="centerX" id="wHV-KY-pPt"/>
-                                <constraint firstItem="Nd7-0w-Hlr" firstAttribute="leading" secondItem="DnJ-dy-g4Q" secondAttribute="leading" id="wMs-jy-V5i"/>
-                                <constraint firstAttribute="trailing" secondItem="oWB-W8-kxX" secondAttribute="trailing" id="y1d-bG-QMd"/>
+                                <constraint firstItem="Nd7-0w-Hlr" firstAttribute="leading" secondItem="DnJ-dy-g4Q" secondAttribute="leading" constant="10" id="wMs-jy-V5i"/>
+                                <constraint firstAttribute="trailing" secondItem="oWB-W8-kxX" secondAttribute="trailing" constant="10" id="y1d-bG-QMd"/>
                             </constraints>
                         </view>
                     </subviews>
                     <constraints>
+                        <constraint firstItem="DnJ-dy-g4Q" firstAttribute="width" secondItem="vPL-Zw-Ph2" secondAttribute="width" id="5kx-RT-W6N"/>
                         <constraint firstAttribute="trailing" secondItem="DnJ-dy-g4Q" secondAttribute="trailing" id="7FN-Kh-MED"/>
                         <constraint firstItem="DnJ-dy-g4Q" firstAttribute="height" secondItem="vPL-Zw-Ph2" secondAttribute="height" priority="250" id="7pX-7e-D69"/>
                         <constraint firstAttribute="bottom" secondItem="DnJ-dy-g4Q" secondAttribute="bottom" id="O2g-62-p2Q"/>
-                        <constraint firstItem="DnJ-dy-g4Q" firstAttribute="leading" secondItem="vPL-Zw-Ph2" secondAttribute="leading" constant="6" id="VNo-Jk-4Qb"/>
+                        <constraint firstItem="DnJ-dy-g4Q" firstAttribute="leading" secondItem="vPL-Zw-Ph2" secondAttribute="leading" id="VNo-Jk-4Qb"/>
                         <constraint firstItem="DnJ-dy-g4Q" firstAttribute="top" secondItem="vPL-Zw-Ph2" secondAttribute="top" id="rKa-Yp-MkV"/>
                     </constraints>
                 </scrollView>
@@ -130,7 +151,6 @@
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="DnJ-dy-g4Q" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" id="2eh-bD-EPU"/>
                 <constraint firstItem="vPL-Zw-Ph2" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="Bbc-k9-pkb"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="vPL-Zw-Ph2" secondAttribute="trailing" id="KJI-ji-CT2"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="vPL-Zw-Ph2" secondAttribute="bottom" id="Nm1-Oi-o9c"/>
