--- a/Yelp Locator/Yelp Locator/Views/Business Details/Detail Item/BusinessDetailView.xib
+++ b/Yelp Locator/Yelp Locator/Views/Business Details/Detail Item/BusinessDetailView.xib
@@ -4,7 +4,6 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -15,7 +14,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xhG-0Q-coK">
-                    <rect key="frame" x="10" y="10" width="394" height="20"/>
+                    <rect key="frame" x="10" y="5" width="394" height="20"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="20" id="jL2-bJ-dc8"/>
                     </constraints>
@@ -24,18 +23,18 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EEF-7t-8wj">
-                    <rect key="frame" x="10" y="35" width="394" height="44"/>
+                    <rect key="frame" x="10" y="30" width="394" height="49"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <color key="backgroundColor" red="0.99999064209999999" green="0.9999936223" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
             <constraints>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="EEF-7t-8wj" secondAttribute="trailing" constant="10" id="4qB-9E-vY8"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="EEF-7t-8wj" secondAttribute="bottom" constant="5" id="9Bi-gz-6mB"/>
-                <constraint firstItem="xhG-0Q-coK" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="10" id="F5v-V9-SQj"/>
+                <constraint firstItem="xhG-0Q-coK" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="5" id="F5v-V9-SQj"/>
                 <constraint firstItem="xhG-0Q-coK" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="10" id="IXh-Lz-hju"/>
                 <constraint firstItem="EEF-7t-8wj" firstAttribute="top" secondItem="xhG-0Q-coK" secondAttribute="bottom" constant="5" id="qba-Q6-0Za"/>
                 <constraint firstAttribute="trailing" secondItem="xhG-0Q-coK" secondAttribute="trailing" constant="10" id="rUf-2H-PIK"/>
@@ -49,9 +48,4 @@
             <point key="canvasLocation" x="-17.39130434782609" y="-129.91071428571428"/>
         </view>
     </objects>
-    <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-    </resources>
 </document>
