--- a/Yelp Locator/Yelp Locator/Views/Business Details/Review Item/BusinessReviewView.xib
+++ b/Yelp Locator/Yelp Locator/Views/Business Details/Review Item/BusinessReviewView.xib
@@ -11,30 +11,47 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="BusinessReviewView" customModule="Yelp_Locator" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="200"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="164"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jUE-h7-hQE">
-                    <rect key="frame" x="5" y="5" width="50" height="50"/>
+                    <rect key="frame" x="10" y="5" width="50" height="50"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="50" id="dom-Xx-5IU"/>
                         <constraint firstAttribute="width" constant="50" id="iJ4-ET-Y3K"/>
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5hb-mT-a4e">
-                    <rect key="frame" x="60" y="5" width="349" height="21"/>
+                    <rect key="frame" x="65" y="5" width="339" height="20.5"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Upa-p4-N65">
-                    <rect key="frame" x="5" y="60" width="404" height="20.5"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Upa-p4-N65">
+                    <rect key="frame" x="10" y="60" width="394" height="69"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gx4-CZ-dvR">
-                    <rect key="frame" x="60" y="31" width="349" height="21"/>
+                <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Oav-x4-gcf">
+                    <rect key="frame" x="65" y="30.5" width="0.0" height="25"/>
+                    <subviews>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wgo-6j-R1e">
+                            <rect key="frame" x="0.0" y="0.0" width="0.0" height="25"/>
+                            <constraints>
+                                <constraint firstAttribute="width" id="qay-Mz-W0o"/>
+                            </constraints>
+                        </imageView>
+                    </subviews>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="25" id="60C-No-xnu"/>
+                    </constraints>
+                </stackView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LDo-zT-jbo">
+                    <rect key="frame" x="10" y="134" width="394" height="20"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="20" id="mzo-8G-0nZ"/>
+                    </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
@@ -43,27 +60,31 @@
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="Gx4-CZ-dvR" firstAttribute="top" secondItem="5hb-mT-a4e" secondAttribute="bottom" constant="5" id="3Zd-6X-6vl"/>
-                <constraint firstAttribute="trailing" secondItem="5hb-mT-a4e" secondAttribute="trailing" constant="5" id="AgL-2g-qSa"/>
+                <constraint firstAttribute="trailing" secondItem="5hb-mT-a4e" secondAttribute="trailing" constant="10" id="AgL-2g-qSa"/>
+                <constraint firstItem="Oav-x4-gcf" firstAttribute="leading" secondItem="jUE-h7-hQE" secondAttribute="trailing" constant="5" id="DU7-Kd-tSP"/>
                 <constraint firstItem="5hb-mT-a4e" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="5" id="JCS-af-azW"/>
                 <constraint firstItem="5hb-mT-a4e" firstAttribute="leading" secondItem="jUE-h7-hQE" secondAttribute="trailing" constant="5" id="MfR-Ut-bgc"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="Upa-p4-N65" secondAttribute="bottom" constant="5" id="NKZ-oh-obV"/>
                 <constraint firstItem="Upa-p4-N65" firstAttribute="top" secondItem="jUE-h7-hQE" secondAttribute="bottom" constant="5" id="Y7w-Uh-QGb"/>
-                <constraint firstItem="jUE-h7-hQE" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="5" id="hqf-wT-wlq"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="Gx4-CZ-dvR" secondAttribute="trailing" constant="5" id="pk2-pJ-MZA"/>
-                <constraint firstItem="Gx4-CZ-dvR" firstAttribute="leading" secondItem="jUE-h7-hQE" secondAttribute="trailing" constant="5" id="qBt-y0-lgD"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="Upa-p4-N65" secondAttribute="trailing" constant="5" id="tte-ML-62h"/>
+                <constraint firstItem="LDo-zT-jbo" firstAttribute="top" secondItem="Upa-p4-N65" secondAttribute="bottom" constant="5" id="ZSB-x7-Qyd"/>
+                <constraint firstItem="Oav-x4-gcf" firstAttribute="top" secondItem="5hb-mT-a4e" secondAttribute="bottom" constant="5" id="bgM-Qi-mpj"/>
+                <constraint firstItem="jUE-h7-hQE" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="10" id="hqf-wT-wlq"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="LDo-zT-jbo" secondAttribute="trailing" constant="10" id="pUN-M3-wX4"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Oav-x4-gcf" secondAttribute="trailing" constant="10" id="qkf-aT-zTA"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="Upa-p4-N65" secondAttribute="trailing" constant="10" id="tte-ML-62h"/>
                 <constraint firstItem="jUE-h7-hQE" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="5" id="wWu-dh-aJH"/>
-                <constraint firstItem="Upa-p4-N65" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="5" id="zZP-mS-z5e"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="LDo-zT-jbo" secondAttribute="bottom" constant="10" id="xN0-2q-JUn"/>
+                <constraint firstItem="LDo-zT-jbo" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="10" id="xSb-PC-xHp"/>
+                <constraint firstItem="Upa-p4-N65" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="10" id="zZP-mS-z5e"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
-                <outlet property="ratingLabel" destination="Gx4-CZ-dvR" id="0bR-kW-EbB"/>
+                <outlet property="dateLabel" destination="LDo-zT-jbo" id="EUf-lJ-F9F"/>
+                <outlet property="ratingStackView" destination="Oav-x4-gcf" id="3aC-GR-e3g"/>
                 <outlet property="reviewContentLabel" destination="Upa-p4-N65" id="PSk-5K-MhX"/>
                 <outlet property="userImageView" destination="jUE-h7-hQE" id="hMm-wI-BOG"/>
                 <outlet property="userNameLabel" destination="5hb-mT-a4e" id="YVb-d1-AUh"/>
             </connections>
-            <point key="canvasLocation" x="-17.39130434782609" y="-91.071428571428569"/>
+            <point key="canvasLocation" x="-17.39130434782609" y="-103.125"/>
         </view>
     </objects>
     <resources>
