--- a/Yelp Locator/Yelp Locator/Views/Cells/Business List/BusinessListCell.xib
+++ b/Yelp Locator/Yelp Locator/Views/Cells/Business List/BusinessListCell.xib
@@ -10,16 +10,23 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="businessListCell" rowHeight="103" id="KGk-i7-Jjw" customClass="BusinessListCell" customModule="Yelp_Locator" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="103"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="businessListCell" rowHeight="203" id="KGk-i7-Jjw" customClass="BusinessListCell" customModule="Yelp_Locator" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="203"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="103"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="203"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wx7-Ot-d1Z">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="103"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="203"/>
                         <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hgu-Pg-Dzq">
+                                <rect key="frame" x="0.0" y="202" width="320" height="1"/>
+                                <color key="backgroundColor" red="0.94549435380000002" green="0.94565302129999995" blue="0.94547218079999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="1" id="j7m-ut-6AI"/>
+                                </constraints>
+                            </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mJA-iV-u6e">
                                 <rect key="frame" x="10" y="10" width="300" height="20"/>
                                 <constraints>
@@ -30,13 +37,13 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MZm-tc-dp9">
-                                <rect key="frame" x="10" y="35" width="255" height="13"/>
+                                <rect key="frame" x="10" y="35" width="275" height="83"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="53P-bD-ZV5">
-                                <rect key="frame" x="10" y="53" width="255" height="20"/>
+                                <rect key="frame" x="10" y="123" width="275" height="20"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="20" id="eU0-zb-VYE"/>
                                 </constraints>
@@ -45,36 +52,59 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dI2-ao-6np">
-                                <rect key="frame" x="270" y="31.5" width="40" height="40"/>
+                                <rect key="frame" x="290" y="91.5" width="20" height="20"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="40" id="9KQ-jE-ilM"/>
-                                    <constraint firstAttribute="width" constant="40" id="HO0-R0-4f3"/>
+                                    <constraint firstAttribute="height" constant="20" id="9KQ-jE-ilM"/>
+                                    <constraint firstAttribute="width" constant="20" id="HO0-R0-4f3"/>
                                 </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ml3-gh-Srq">
-                                <rect key="frame" x="10" y="78" width="255" height="20"/>
+                                <rect key="frame" x="10" y="173" width="0.0" height="25"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="I5c-SP-IC3">
+                                        <rect key="frame" x="0.0" y="0.0" width="0.0" height="25"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" id="BxR-st-nDK"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="20" id="jOF-3S-z75"/>
+                                    <constraint firstAttribute="height" constant="25" id="jOF-3S-z75"/>
                                 </constraints>
                             </stackView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FyM-0V-D0K">
+                                <rect key="frame" x="10" y="148" width="275" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="vpn-S0-C8r"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstAttribute="bottom" secondItem="hgu-Pg-Dzq" secondAttribute="bottom" id="Bz2-ap-igc"/>
                             <constraint firstAttribute="bottom" secondItem="ml3-gh-Srq" secondAttribute="bottom" constant="5" id="HyZ-zR-bgp"/>
                             <constraint firstAttribute="trailing" secondItem="dI2-ao-6np" secondAttribute="trailing" constant="10" id="P5C-2w-AJQ"/>
                             <constraint firstItem="ml3-gh-Srq" firstAttribute="leading" secondItem="wx7-Ot-d1Z" secondAttribute="leading" constant="10" id="QVs-hi-Gyp"/>
+                            <constraint firstAttribute="trailing" secondItem="hgu-Pg-Dzq" secondAttribute="trailing" id="RPL-eq-m7l"/>
                             <constraint firstItem="dI2-ao-6np" firstAttribute="leading" secondItem="MZm-tc-dp9" secondAttribute="trailing" constant="5" id="RgW-uq-DAR"/>
+                            <constraint firstItem="hgu-Pg-Dzq" firstAttribute="leading" secondItem="wx7-Ot-d1Z" secondAttribute="leading" id="Vmb-Al-W9b"/>
                             <constraint firstItem="MZm-tc-dp9" firstAttribute="top" secondItem="mJA-iV-u6e" secondAttribute="bottom" constant="5" id="X2z-HS-bpb"/>
                             <constraint firstItem="dI2-ao-6np" firstAttribute="leading" secondItem="53P-bD-ZV5" secondAttribute="trailing" constant="5" id="XtC-L8-fcL"/>
                             <constraint firstItem="MZm-tc-dp9" firstAttribute="leading" secondItem="wx7-Ot-d1Z" secondAttribute="leading" constant="10" id="aRR-PG-79p"/>
+                            <constraint firstItem="dI2-ao-6np" firstAttribute="leading" secondItem="FyM-0V-D0K" secondAttribute="trailing" constant="5" id="c6w-0K-GxH"/>
                             <constraint firstItem="dI2-ao-6np" firstAttribute="centerY" secondItem="wx7-Ot-d1Z" secondAttribute="centerY" id="dlC-hQ-tel"/>
                             <constraint firstItem="mJA-iV-u6e" firstAttribute="trailing" secondItem="dI2-ao-6np" secondAttribute="trailing" id="hgs-hi-4R3"/>
                             <constraint firstItem="mJA-iV-u6e" firstAttribute="top" secondItem="wx7-Ot-d1Z" secondAttribute="top" constant="10" id="hmZ-ok-P1r"/>
                             <constraint firstItem="53P-bD-ZV5" firstAttribute="leading" secondItem="wx7-Ot-d1Z" secondAttribute="leading" constant="10" id="m9T-Xh-rLM"/>
+                            <constraint firstItem="FyM-0V-D0K" firstAttribute="leading" secondItem="wx7-Ot-d1Z" secondAttribute="leading" constant="10" id="miT-mf-z7F"/>
                             <constraint firstItem="mJA-iV-u6e" firstAttribute="leading" secondItem="wx7-Ot-d1Z" secondAttribute="leading" constant="10" id="r6o-pg-nRm"/>
+                            <constraint firstItem="ml3-gh-Srq" firstAttribute="top" secondItem="FyM-0V-D0K" secondAttribute="bottom" constant="5" id="sbd-PO-UC1"/>
                             <constraint firstItem="53P-bD-ZV5" firstAttribute="top" secondItem="MZm-tc-dp9" secondAttribute="bottom" constant="5" id="y4t-YU-XvU"/>
-                            <constraint firstItem="dI2-ao-6np" firstAttribute="leading" secondItem="ml3-gh-Srq" secondAttribute="trailing" constant="5" id="y7U-ZT-yGe"/>
-                            <constraint firstItem="ml3-gh-Srq" firstAttribute="top" secondItem="53P-bD-ZV5" secondAttribute="bottom" constant="5" id="yxa-Np-FVQ"/>
+                            <constraint firstItem="dI2-ao-6np" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="ml3-gh-Srq" secondAttribute="trailing" constant="5" id="y7U-ZT-yGe"/>
+                            <constraint firstItem="FyM-0V-D0K" firstAttribute="top" secondItem="53P-bD-ZV5" secondAttribute="bottom" constant="5" id="zGb-Uv-9Fa"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -89,12 +119,13 @@
             <connections>
                 <outlet property="actionImageView" destination="dI2-ao-6np" id="KOQ-cn-s5d"/>
                 <outlet property="addressLabel" destination="MZm-tc-dp9" id="BCD-c8-dK1"/>
+                <outlet property="distanceLabel" destination="FyM-0V-D0K" id="SdM-2z-wfD"/>
                 <outlet property="mainView" destination="wx7-Ot-d1Z" id="jo3-rh-82q"/>
                 <outlet property="nameLabel" destination="mJA-iV-u6e" id="48K-Qs-hdK"/>
                 <outlet property="ratingStackView" destination="ml3-gh-Srq" id="TTh-4e-kCe"/>
                 <outlet property="typeLabel" destination="53P-bD-ZV5" id="xn0-OU-Goa"/>
             </connections>
-            <point key="canvasLocation" x="-262.31884057971018" y="90.736607142857139"/>
+            <point key="canvasLocation" x="-626.08695652173913" y="-61.941964285714285"/>
         </tableViewCell>
     </objects>
     <resources>
